Cleaned up the SQL

--- a/examples/AI_Notebooks/SimpleCount.ipynb
+++ b/examples/AI_Notebooks/SimpleCount.ipynb
@@ -65,7 +65,8 @@
    "outputs": [],
    "source": [
     "query = \"\"\"\n",
-    "    SELECT COUNT(1) FROM `project-genie-query-prod.consortium.genomic_information`\n",
+    "    SELECT COUNT(1) AS row_count \n",
+    "      FROM `project-genie-query-prod.consortium.genomic_information`\n",
     "\"\"\"\n",
     "query_job = client.query(\n",
     "    query,\n",
@@ -76,6 +77,13 @@
     "df = query_job.to_dataframe()\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
