Updated step descriptions and some cell fixes.

--- a/examples/AI_Notebooks/Advanced.ipynb
+++ b/examples/AI_Notebooks/Advanced.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Advanced Query\n",
+    "# GENIE and TCGA Biquery AI Notebook Example\n",
     "\n",
-    "The following example shows how to write an advanced query using magic command that allows you to run queries with minimal code and visualize the results."
+    "The following notebook example shows how to write an advanced query using magic command that allows you to run queries with minimal code and visualize the results. It calculates the frequency of SNV mutations for the top 50 mutated genes in GENIE, and compairs them to the same genes in TCGA."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TCGA Query \n",
-    "First query against a 3rd party dataset, this being the Somatic_Mutation table provided by ISB-CGC.\n"
+    "## Query TCGA Data\n",
+    "First query against isb-cgc.TCGA_hg38_data_v0.Somatic_Mutation BigQuery table provided by ISB-CGC. Takes a list of gene symbols and returns a list of TCGA cases (barcodes) that have a SNP called for those genes "
    ]
   },
   {
@@ -69,7 +69,9 @@
    "metadata": {},
    "source": [
     "## Genie Query\n",
-    "Now query the same set of genes against the Genie tables."
+    "Second query against project-genie-query-prod.consortium.mutation. Takes a list of gene symbols and returns a list of GENIE cases (patient IDs) that have a SNP called for those genes.\n",
+    "\n",
+    "Code from ISB-CGC Community Notebooks (D. Gibbs) and PHS (J. Slagel) \n"
    ]
   },
   {
@@ -78,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"\"\"\n",
+    "%%bigquery genie\n",
     "WITH genes AS (\n",
     "  SELECT * FROM UNNEST([\n",
     "       'ABL1',   'AKT1',    'ALK',    'APC',\n",
@@ -111,21 +113,24 @@
     "     AND m.Variant_Type ='SNP'\n",
     "     AND m.Tumor_Sample_Barcode = luad.SAMPLE_ID \n",
     "GROUP BY m.Hugo_Symbol \n",
-    "ORDER BY mut_freq desc\"\"\"\n",
-    "query_job = client.query(\n",
-    "    query,\n",
-    "    location=\"US\",\n",
-    ")  # API request - starts the query\n",
-    "\n",
-    "genie_df = query_job.to_dataframe()\n",
-    "genie_df"
+    "ORDER BY mut_freq desc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genie"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Merge Tables"
+    "## Merge Tables\n",
+    "Merges the tables using pandas.  A more efficent approach would be to use only a single SQL query to query both data sources.  However this example shows how you can use both BigQuery and pandas within a single example."
    ]
   },
   {
@@ -142,7 +147,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot"
+    "## Plot\n",
+    "Visualize the results."
    ]
   },
   {
@@ -160,7 +166,7 @@
     "        p.annotate(txt, (results.mut_freq_x.iat[i] + 0.005, results.mut_freq_y.iat[i]))\n",
     "p.annotate(\"\",\n",
     "              xy=(0, 0), xycoords='data',\n",
-    "              xytext=(0.4, 0.4), textcoords='data',\n",
+    "              xytext=(0.43, 0.43), textcoords='data',\n",
     "              arrowprops=dict(arrowstyle=\"-\",\n",
     "                              connectionstyle=\"arc3,rad=0.\"), \n",
     "              )"
